--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
 	<link rel="stylesheet" type="text/css" href="style.css  ">
 </head>
 <body>
- <section>
-  <div class="circle">
-  </div>
 	<div class="container">
 		<div class="contact-box">
-			<a href="#" class="logo"><img src="./img/logo.png"></a>
+			<a href="./index.html" class="logo"><img src="./img/logo.png"></a>
 			<div class="contact-left">
 				<h1>Fill the form.<br>It's easy.</h1>
 				 <form>
@@ -21,7 +18,7 @@
 			 			<input type="text" placeholder="First Name">
 			 		</div>
 			 		<div class="input-group">
-			 			<input type="text" placeholder="Last Name">
+			 			<input class="input1" type="text" placeholder="Last Name">
 			 		</div>
 			 	</div>
 			 	<div class="input-row">	
@@ -39,6 +36,7 @@
 			 	<button class="button1">Send message</button>
 			 </form>
 			</div>
+			<div class="line"></div>
 			<div class="contact-right">
 				 <h2>Need<br>presentation?</h2>
 				 <p class="p1">You like what we do, but you need to<br>
@@ -50,6 +48,5 @@
 			</div>
 		</div>
 	</div>
-  </section>
 </body>
 </html>
